--- a/frontend_client/public/index.html
+++ b/frontend_client/public/index.html
@@ -53,4 +53,34 @@
         To create a production bundle, use `npm run build` or `yarn build`.
         -->
     </body>
+    <!-- Latest jQuery --> 
+    <script src="%PUBLIC_URL%/assets/js/jquery-3.6.0.min.js"></script> 
+    <!-- jquery-ui --> 
+    <script src="%PUBLIC_URL%/assets/js/jquery-ui.js"></script>
+    <!-- popper min js -->
+    <script src="%PUBLIC_URL%/assets/js/popper.min.js"></script>
+    <!-- Latest compiled and minified Bootstrap --> 
+    <script src="%PUBLIC_URL%/assets/bootstrap/js/bootstrap.min.js"></script> 
+    <!-- owl-carousel min js  --> 
+    <script src="%PUBLIC_URL%/assets/owlcarousel/js/owl.carousel.min.js"></script> 
+    <!-- magnific-popup min js  --> 
+    <script src="%PUBLIC_URL%/assets/js/magnific-popup.min.js"></script> 
+    <!-- waypoints min js  --> 
+    <script src="%PUBLIC_URL%/assets/js/waypoints.min.js"></script> 
+    <!-- parallax js  --> 
+    <script src="%PUBLIC_URL%/assets/js/parallax.js"></script> 
+    <!-- countdown js  --> 
+    <script src="%PUBLIC_URL%/assets/js/jquery.countdown.min.js"></script> 
+    <!-- imagesloaded js --> 
+    <script src="%PUBLIC_URL%/assets/js/imagesloaded.pkgd.min.js"></script>
+    <!-- isotope min js --> 
+    <script src="%PUBLIC_URL%/assets/js/isotope.min.js"></script>
+    <!-- jquery.dd.min js -->
+    <script src="%PUBLIC_URL%/assets/js/jquery.dd.min.js"></script>
+    <!-- slick js -->
+    <script src="%PUBLIC_URL%/assets/js/slick.min.js"></script>
+    <!-- elevatezoom js -->
+    <script src="%PUBLIC_URL%/assets/js/jquery.elevatezoom.js"></script>
+    <!-- scripts js --> 
+    <script src="%PUBLIC_URL%/assets/js/scripts.js"></script>
 </html>
