--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -30,4 +30,6 @@
     <!-- jQuery
     <script src="%PUBLIC_URL%/assets/plugins/jquery/jquery.min.js"></script>
     <script src="%PUBLIC_URL%/assets/js/adminlte.min.js"></script> -->
+    <!-- Select2 -->
+    <!-- <script src="%PUBLIC_URL%/assets/plugins/select2/js/select2.full.min.js"></script> -->
 </html>
